resources/assets/sass/main.scss
/* ... */
.ucwords {
    text-transform: uppercase;
}

.text-green {
    color: #99b022
}

.text-red {
    color: #d16565;
}

.text-black {
    color: #000;
}

.fc-black {
    color: #000;
}

.text-blue {
    color: #153661;
}

.text-red {
    color: $red-two;
}

.text-light-blue {
    color: #005cba;
}

.label-extra {
    font-size: 10px;
    margin-top: 5px;
}

.label-primary {
    background-color: #2159a2;
}

.label-red {
    background-color: #d16565;
}

// Home

.banner{
    margin-top: 130px;
    background: url("/img/smiling-lady.jpg") no-repeat;
    background-size: cover;
    background-position: center center;
    .arrow-cta{
        position: absolute;
        top: 50%;
        display: block;
        width: 50px;
        transform: translateY(-50%);
        color: #fff;
        background: $red-two;
        text-align: center;
        padding: 15px 0;
        font-size: 20px;
        &.right{right: 0;}
        &.left{left: 0;}
    }
    .carousel{
        padding: 30px 0;
        min-height: 60vh;
        .item{
            min-height: 300px;
            padding-top: 8%;
        }
    }
    h2{
        color: $dark-grey;
        line-height: 50px;
        font-size: 40px;
        color: #575654;
        span{
            color: $red-two;
        }
    }
    p{
        font-size: 18px;
        line-height: 28px;
        color: #4c4c4c;
        margin: 30px 0;
    }
}

.central-text-block,
.full-width-three-col{
    h2{
        color: $red-two;
        font-weight: 200;
        margin-bottom: 30px;
    }
    .fa{
        color: #4c4c4c;
        font-size: 60px;
        margin-bottom: 30px;
    }
}

.how-it-works-landing{
    h2 {
        font-size: 60px;
    }
}

.central-text-block{
    padding: 60px 0 30px 0;
    p{
        color: $dark-grey;
        margin-bottom: 30px;
    }
}
.full-width-centered{
    padding: 60px 0;
    background: #fafafa;
    text-align: center;
    h3{
        font-family: 'Open Sans';
        color: #6c6c6c;
        span{color: $red-two; font-weight: bold;}
    }
}
.full-width-three-col{
    padding: 60px 0;
    background: #fafafa;
    .how-works-item{
        padding: 0 2%;
        img{
            margin-bottom: 20px;
        }
    }
    .how-works-inner{
        padding: 5% 5% 15% 5%;
        border-radius: 50px;
        box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
        min-height: 495px;
    }
}
.darker-grey{
    background: #f3f3f3;
    padding: 60px 0;
    h2{
        color: $red-two;
        margin-bottom: 50px;
    }
}
.image-right-block{
    background: $red-two;
    padding: 0;
    .text-wrapper{
        padding-top: 40px;
    }
    p{
        color: #fff;
    }
}

// Video block

.video-block {
    position: relative;
    height: 0;
    padding-bottom: 20%;
    iframe {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border: 0;
    }
}

// How it Works

.work-step{
    padding: 1px 15px 15px 15px;
    h3{
        font-family: 'Open Sans'; 
        font-weight: 700;
        margin-top: 10px;
    }
    p{font-family: 'Open Sans'; font-size: 18px; line-height: 20px;}
    h3,p{color: #fff;}
    &.red{background: $red-two;}
    &.grey{background: $grey-three;}
    &.dark-grey{background: $darker-grey;}
}
.parallelogram{
    width: 93%;
    height: 40px;
    transform: skew(44deg);
    margin-left: 19px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.31) inset;
    &.red{background: $red-two;}
    &.grey{background: $grey-three;}
}

// Blog

.blog{
    padding: 60px 0;
    background-color: #fafafa;
    .listing{
        h4 a{
            font-family: 'GothamMediumRegular';
            color: #000;
        }
    }
    .panel{
        padding: 15px;
        background: #fff;
        min-height: 330px;
    }

    .brand-sidebar{
        h4{
            color: $red-two;
        }
    }
}

// Contact

.contact{
    .banner{
        margin-bottom: 20px;
    }
}

    .contact-column{
        text-align: center;
        margin-bottom: 30px; 
        .fa{
            font-size: 60px;
            margin-top: 20px;
        }
    }

.media-left, .media > .pull-left {
    padding-right: 30px;
}

/* Header */
.main-header {
    background-color: #fff;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
    box-shadow: 0 3px 2px -2px rgba(128, 128, 128, 0.47);
    .logo{
        padding: 15px 0;
    }
    .navbar{
        padding-top: 40px;
        .cta.red{
            color: $red-two;
            background: none;
            border: 2px solid $red-two;
            font-size: 14px;
            line-height: 20px;
            padding: 15px 20px;
            &:hover{
                color: $red-two;
            }
        }
    }
    .header-cta{
        border: 2px solid $dark-grey;
        color: $dark-grey;
        font-size: 14px;
        line-height: 20px;
        padding: 15px 20px;
        display: inline-block;
        margin-top: 40px;
        float: right;
    }
}

.main-header .login-box {
    margin-top: 30px;
    position: relative;
    margin-bottom: 30px
}

.main-header .login-box .form-container {
    width: 100%;
    display: block
}

.main-header .login-box .form-container .form-control {
    border-radius: 0;
    margin-top: 10px
}

.main-header .login-box a {
    color: #fff;
    margin-top: 2px;
    display: inline-block
}

.main-header .login-box .form-controls {
    display: inline-block;
    width: 100%;
    margin-top: 10px
}

.main-header .login-box .form-controls .section {
    width: 50%;
    float: left
}

.main-header .login-box .form-controls {
    font-size: 10px
}

.main-header .login-box .form-controls .btn-primary {
    border-radius: 0;
    background: #343838;
    border: 0;
    width: 100%;
    font-size: 11px
}

.main-header .login-box .brand-sprite.brand-reset {
    width: 10px;
    height: 10px;
    margin-right: 3px;
    display: inline-block;
    vertical-align: middle;
    background-position: 230px 0
}
/* ... */

